test/e2e/testdata/sds.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: sds-gateway
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  infrastructure:
    annotations:
      kubectl.kubernetes.io/default-container: envoy
      kubectl.kubernetes.io/default-logs-container: envoy
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: sds-gateway-settings
  listeners:
    - name: tcp
      protocol: TCP
      port: 8090
      allowedRoutes:
        kinds:
          - kind: TCPRoute
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: EnvoyProxy
metadata:
  name: sds-gateway-settings
  namespace: gateway-conformance-infra
spec:
  ipFamily: IPv4
  provider:
    type: Kubernetes
    kubernetes:
      envoyDeployment:
        pod:
          volumes:
            - name: tls-certs
              secret:
                secretName: tls-termination-certificate
            - name: sds-socket
              hostPath:
                path: /var/run/sds
                type: DirectoryOrCreate
        patch:
          type: StrategicMerge
          value:
            spec:
              template:
                spec:
                  containers:
                    - name: sds-test-server
                      image: envoyproxy/gateway-sds-test-server:latest
                      imagePullPolicy: IfNotPresent
                      args:
                        - --socket-path=/var/run/sds/sds.sock
                        - --secret-name=server_cert
                        - --cert-path=/var/tls-certs/tls.crt
                        - --key-path=/var/tls-certs/tls.key
                      volumeMounts:
                        - name: tls-certs
                          mountPath: /var/tls-certs/
                          readOnly: true
                        - name: sds-socket
                          mountPath: /var/run/sds
                    - name: envoy
                      volumeMounts:
                        # mount the SDS socket to the envoy container so that it can talk to the SDS server
                        - name: sds-socket
                          mountPath: "/var/run/sds"
  backendTLS:
    clientCertificateRef:
      kind: Secret
      name: "sds-client-tls-certificate"
---
apiVersion: v1
kind: Secret
metadata:
  name: sds-client-tls-certificate
  namespace: gateway-conformance-infra
type: gateway.envoyproxy.io/sds
data:
  # base64(unix:///var/run/sds/sds.sock)
  url: dW5peDovLy92YXIvcnVuL3Nkcy9zZHMuc29jaw==
  # base64 for "server_cert"
  secretName: c2VydmVyX2NlcnQ=
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: sds-route
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: sds-gateway
  rules:
    - backendRefs:
        - name: sds-mtls-backend
          port: 443
---
apiVersion: v1
data:
  ca.crt: |
    -----BEGIN CERTIFICATE-----
    MIIDQzCCAiugAwIBAgIBATANBgkqhkiG9w0BAQsFADBCMRMwEQYDVQQKEwpFbnZv
[...]
    S5EAolzVv0yB7wHCWCgfG/ckdOTUNnE=
    -----END CERTIFICATE-----
kind: ConfigMap
metadata:
  name: backend-tls-ca
  namespace: gateway-conformance-infra
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: tls-backend-policy
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: ""
      kind: Service
      name: sds-mtls-backend
      sectionName: https
  validation:
    caCertificateRefs:
      - name: backend-tls-ca
        group: ""
        kind: ConfigMap
    hostname: example.com
---
# mTLS backend that validates client certificates
apiVersion: v1
kind: Service
metadata:
  name: sds-mtls-backend
  namespace: gateway-conformance-infra
spec:
  selector:
    app: sds-mtls-backend
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sds-mtls-backend
  namespace: gateway-conformance-infra
  labels:
    app: sds-mtls-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sds-mtls-backend
  template:
    metadata:
      labels:
        app: sds-mtls-backend
    spec:
      containers:
        - name: mtls-backend
          image: registry.k8s.io/gateway-api/conformance/echo-basic:v0.1.0
          volumeMounts:
            - name: server-cert-volume
              mountPath: /etc/server-cert
            - name: client-ca-volume
              mountPath: /etc/client-ca
          env:
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: SERVICE_NAME
              value: sds-mtls-backend
            - name: TLS_SERVER_CERT
              value: /etc/server-cert/tls.crt
            - name: TLS_SERVER_PRIVKEY
              value: /etc/server-cert/tls.key
            - name: TLS_CLIENT_CACERTS
              value: /etc/client-ca/ca.crt
          resources:
            requests:
              cpu: 10m
      volumes:
        - name: server-cert-volume
          secret:
            secretName: backend-tls-checks-certificate
        - name: client-ca-volume
          secret:
            secretName: tls-termination-certificate
            items:
              - key: ca.crt
                path: ca.crt
---
# Certificate for TLS termination - Wildcard cert for *.example.com
# openssl req -x509 -sha256 -nodes -days 3650 -newkey rsa:2048 -subj '/O=example Inc./CN=*.example.com' -keyout tls.key -out tls.crt
apiVersion: v1
data:
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2Z0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktnd2dnU2tBZ0VBQW9JQkFRRG5zbHN5Q21VQmxmMTgKT0htNkNKRkdYeGNMWkF2TGhyWkdZK0NGTFpwTW5IaVhDTTRYLzB4V0ViS2d3TGJTd3c4RURISXZlVElSajNvQQpta2l0d2t2UUZiUkZSUnlDSlNjOXNMb1MzY2hPcEp5TlUxdEYrenYraHAvQlR6L0VGMHBqMUZJdDBYc0g3UlZIClRaaDBnUzdlYm53T3RhNU51WEFuYmFCakhxdVJmQVZPUWcrZDNCSU9kZXhzZkJvNFN5TEc4VHRsYis4bXVOY24KTll6UFVtQW01NkE4SmNsblVxc2U3aTVDWXdZeWlRZnJCNk5NS043c1YwR2p6enE0RHB5WHMxZWoxZmpGQmpKUwpxVlAzTm5FcEoyaWFsb [...]
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURXakNDQWtLZ0F3SUJBZ0lVSk9taGNTTHR6LzVRU2tvcitaOFpvOWVocnlNd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0x6RVZNQk1HQTFVRUNnd01aWGhoYlhCc1pTQkpibU11TVJZd0ZBWURWUVFEREEwcUxtVjRZVzF3YkdVdQpZMjl0TUI0WERUSTFNVEl3TlRBNE1EWXdNMW9YRFRNMU1USXdNekE0TURZd00xb3dMekVWTUJNR0ExVUVDZ3dNClpYaGhiWEJzWlNCSmJtTXVNUll3RkFZRFZRUUREQTBxTG1WNFlXMXdiR1V1WTI5dE1JSUJJakFOQmdrcWhraUcKOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQTU3SmJNZ3BsQVpYOWZEaDV1Z2lSUmw4WEMyUUx5NGEyUm1QZwpoUzJhVEp4NGx3ak9GL [...]
  ca.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURXakNDQWtLZ0F3SUJBZ0lVSk9taGNTTHR6LzVRU2tvcitaOFpvOWVocnlNd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0x6RVZNQk1HQTFVRUNnd01aWGhoYlhCc1pTQkpibU11TVJZd0ZBWURWUVFEREEwcUxtVjRZVzF3YkdVdQpZMjl0TUI0WERUSTFNVEl3TlRBNE1EWXdNMW9YRFRNMU1USXdNekE0TURZd00xb3dMekVWTUJNR0ExVUVDZ3dNClpYaGhiWEJzWlNCSmJtTXVNUll3RkFZRFZRUUREQTBxTG1WNFlXMXdiR1V1WTI5dE1JSUJJakFOQmdrcWhraUcKOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQTU3SmJNZ3BsQVpYOWZEaDV1Z2lSUmw4WEMyUUx5NGEyUm1QZwpoUzJhVEp4NGx3ak9GLz [...]
kind: Secret
metadata:
  name: tls-termination-certificate
  namespace: gateway-conformance-infra
type: kubernetes.io/tls
---
# Copy of the TLS termination certificate but with the key in a different namespace for non gateway namespace mode.
apiVersion: v1
data:
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2Z0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktnd2dnU2tBZ0VBQW9JQkFRRG5zbHN5Q21VQmxmMTgKT0htNkNKRkdYeGNMWkF2TGhyWkdZK0NGTFpwTW5IaVhDTTRYLzB4V0ViS2d3TGJTd3c4RURISXZlVElSajNvQQpta2l0d2t2UUZiUkZSUnlDSlNjOXNMb1MzY2hPcEp5TlUxdEYrenYraHAvQlR6L0VGMHBqMUZJdDBYc0g3UlZIClRaaDBnUzdlYm53T3RhNU51WEFuYmFCakhxdVJmQVZPUWcrZDNCSU9kZXhzZkJvNFN5TEc4VHRsYis4bXVOY24KTll6UFVtQW01NkE4SmNsblVxc2U3aTVDWXdZeWlRZnJCNk5NS043c1YwR2p6enE0RHB5WHMxZWoxZmpGQmpKUwpxVlAzTm5FcEoyaWFsb [...]
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURXakNDQWtLZ0F3SUJBZ0lVSk9taGNTTHR6LzVRU2tvcitaOFpvOWVocnlNd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0x6RVZNQk1HQTFVRUNnd01aWGhoYlhCc1pTQkpibU11TVJZd0ZBWURWUVFEREEwcUxtVjRZVzF3YkdVdQpZMjl0TUI0WERUSTFNVEl3TlRBNE1EWXdNMW9YRFRNMU1USXdNekE0TURZd00xb3dMekVWTUJNR0ExVUVDZ3dNClpYaGhiWEJzWlNCSmJtTXVNUll3RkFZRFZRUUREQTBxTG1WNFlXMXdiR1V1WTI5dE1JSUJJakFOQmdrcWhraUcKOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQTU3SmJNZ3BsQVpYOWZEaDV1Z2lSUmw4WEMyUUx5NGEyUm1QZwpoUzJhVEp4NGx3ak9GL [...]
  ca.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURXakNDQWtLZ0F3SUJBZ0lVSk9taGNTTHR6LzVRU2tvcitaOFpvOWVocnlNd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0x6RVZNQk1HQTFVRUNnd01aWGhoYlhCc1pTQkpibU11TVJZd0ZBWURWUVFEREEwcUxtVjRZVzF3YkdVdQpZMjl0TUI0WERUSTFNVEl3TlRBNE1EWXdNMW9YRFRNMU1USXdNekE0TURZd00xb3dMekVWTUJNR0ExVUVDZ3dNClpYaGhiWEJzWlNCSmJtTXVNUll3RkFZRFZRUUREQTBxTG1WNFlXMXdiR1V1WTI5dE1JSUJJakFOQmdrcWhraUcKOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQTU3SmJNZ3BsQVpYOWZEaDV1Z2lSUmw4WEMyUUx5NGEyUm1QZwpoUzJhVEp4NGx3ak9GLz [...]
kind: Secret
metadata:
  name: tls-termination-certificate
  namespace: envoy-gateway-system
type: kubernetes.io/tls
